# Side-projects

switchboard-coinflip/: Anchor.toml  package-lock.json  package.json
switchboard-coinflip/programs/switchboard-coinflip/: Cargo.toml
switchboard-coinflip/programs/switchboard-coinflip/src/: lib.rs
switchboard-coinflip/tests/: switchboard-coinflip.ts
